crates/rymx/tests/snapshots/full__main@mini__pi.rym.snap
---
source: crates/rymx/tests/full.rs
expression: diag.dump_stages()
input_file: crates/rymx/tests/mini/pi.rym
---
--- tokenize ---
Const [const]
HSpace [ ]
Ident [pi]
HSpace [ ]
Assign [=]
HSpace [ ]
Float [3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117067982148086513282]
Semi [;]
VSpace [\n]

--- parse ---
Module {
    name: "",
    constants: [
        Constant {
            name: "pi",
            data: Value(Float 3.141592653589793),
        },
    ],
    children: [],
}


